<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExtraFragments.NewNoteFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newNote_Header"
        android:textAlignment="center"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:backgroundTint="@color/teal_700"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/newNote_Nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldNote_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newNote_Descripcion"
        android:layout_marginTop="20px"
        >

        <EditText
            android:id="@+id/textFieldNote_Informacion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonNote_Cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightgray"
            android:text="@string/btn_Cancelar"/>

        <Button
            android:id="@+id/buttonNote_Guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/btn_Guardar" />
    </LinearLayout>

</LinearLayout>