<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExtraFragments.NewPasswordFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPassword_Header"
        android:textAlignment="center"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/teal_700"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/newPassword_URL"
        app:helperText="Requerido"
        app:startIconDrawable="@drawable/ic_world">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPass_URL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/newPassword_Nombre"
        app:startIconDrawable="@drawable/ic_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPass_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/newPassword_Usuario"
        app:startIconDrawable="@drawable/ic_user">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPass_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/newPassword_Contraseña"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPass_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonPasswordCancelar"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightgray"
            android:text="@string/btn_Cancelar"
            />

        <Button
            android:id="@+id/buttonPasswordGuardar"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:onClick="guardarDatos"
            android:text="@string/btn_Guardar"
            />
    </LinearLayout>


</LinearLayout>