<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ExtraFragments.NewCardFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newCard_Header"
        android:textAlignment="center"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:backgroundTint="@color/teal_700"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/newCard_Titular"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCard_Titular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newCard_Tipo"
        android:layout_marginTop="20px"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCard_Tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newCard_NroTarjeta"
        android:layout_marginTop="20px"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCard_NroTarj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20px">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="9dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lines="2"
            android:text="@string/newCard_FInicio"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCard_FInicioMes"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:text="/"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCard_FInicioAnio"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20px">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="9dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lines="2"
            android:text="@string/newCard_FFin"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCard_FFinMes"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:text="/"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCard_FFinAnio"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newCard_Extra"
        android:layout_marginTop="20px"
        >

        <EditText
            android:id="@+id/textFieldCard_Extra"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonCard_Cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_Cancelar"
            android:backgroundTint="@color/lightgray"/>

        <Button
            android:id="@+id/buttonCard_Guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_Guardar"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</LinearLayout>
